# ERA

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
Assignment_2/: .gitignore  README.md  app.py
Assignment_2/templates/: index.html
Assignment_7/: CIFAR10_Training.ipynb  README.md  dataset.py  model.py  train.py  transforms.py  utils.py
Assignment_8/: README.md  ResNet18_CIFAR-100.ipynb  model.py  train.py  training_logs.md
Assignmnet_5/: MNIST.py  README.md
Colab_ResNet50/: README.md  dataset.py  lr_finder.py  model.py  requirements.txt  train.py
